--- a/src/components/ToDo/ToDo.css
+++ b/src/components/ToDo/ToDo.css
@@ -6,3 +6,20 @@
   -webkit-transform: scale(2, 2);
   margin-right: 1rem;
 }
+
+.done {
+  text-decoration: line-through;
+}
+
+.warning::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: red;
+}
+.warning::-moz-placeholder { /* Firefox 19+ */
+  color: red;
+}
+.warning:-ms-input-placeholder { /* IE 10+ */
+  color: red;
+}
+.warning:-moz-placeholder { /* Firefox 18- */
+  color: red;
+}
